--- a/dawn-enterprise-manage-backend/src/main/resources/application.yml
+++ b/dawn-enterprise-manage-backend/src/main/resources/application.yml
@@ -42,6 +42,9 @@ app:
   otherSymptomId: 582daff0-56a5-45a4-9ca7-dc098c688753
   medicalAdvice: fdd092c0-3227-495b-a83a-0bdc68e67708
 
+# 移动端接口地址
+mobile:
+  host: http://39.105.209.108:8090
 
 
 
